XCode fixup Product target

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
 
 
 
+
+dual/Assets/Plugins/OpenGLPlugin.bundle.meta
+
+*.meta
+
+dual/Assets/Plugins/OpenGLPlugin.bundle.meta
+
+dual/Assets/Plugins/OpenGLPlugin.bundle/Contents.meta
